<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YodoFare</string>
    <string name="version">Version: 0.0.3</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="merchant">Walmart</string>
    <string name="merch_pip_hint">Merch PIP</string>
    <string name="pip_token">Insert the token password</string>

    <!-- Messages Text -->
    <string name="no_wifi">You have to turn on the wi-fi first</string>
    <string name="error">This is embarrassing! An error occurred in the process</string>
    <string name="no_internet">Sorry, seems that you don\'t have an Internet connection right now</string>
    <string name="not_available">Sorry, this feature is not available yet</string>
    <string name="connected">Connected</string>
    <string name="loading">Loading &#x2026;</string>
    <string name="show_pass">Show Password</string>
    <string name="input_pip">Merch Identity Phrase (MIP)</string>
    <string name="select_currency">Select Currency</string>
    <string name="barcode_scanner">Scan the code</string>
    <string name="not_support_bt">This device does not support Bluetooth and cannot use Yodo services</string>
    <string name="not_bt">Advertising service disabled</string>
    <string name="registering_merch">Registering Merch</string>
    <string name="null_response">Null Response</string>
    
    <!-- Values Labels -->
    <string name="total_fare">Fare: </string>
    <string name="balance">Balance: </string>
    <string name="zero">0.00</string>
    <string name="no_item">- no item -</string>
    
    <!-- Fee Labels -->
    <string name="old_fare_zone_1">Old Fare Zone 1: </string>
    <string name="old_fare_zone_2">Old Fare Zone 2: </string>
    <string name="old_fare_zone_3">Old Fare Zone 3: </string>
    
    <string name="adult_fare_zone_1">Adult Fare Zone 1: </string>
    <string name="adult_fare_zone_2">Adult Fare Zone 2: </string>
    <string name="adult_fare_zone_3">Adult Fare Zone 3: </string>

    <string name="child_fare_zone_1">Child Fare Zone 1: </string>
    <string name="child_fare_zone_2">Child Fare Zone 2: </string>
    <string name="child_fare_zone_3">Child Fare Zone 3: </string>

    <string name="student_fare_zone_1">Student Fare Zone 1: </string>
    <string name="student_fare_zone_2">Student Fare Zone 2: </string>
    <string name="student_fare_zone_3">Student Fare Zone 3: </string>
    
    <!-- Input Labels -->
    <string name="clear">C</string>
    
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    
    <!-- Progress Dialog Messages -->
    <string name="balance_message">Getting Balance</string>
    <string name="advertising_message">Getting Advertising</string>
    <string name="advertising_loading">Loading Advertising</string>
    
    <!-- Balance Messages -->
    <string name="yodo_cash">Yodo Cash</string>
    <string name="yodo_debits">Yodo Debits</string>
    <string name="yodo_cumulative_balance">Cumulative Balance:</string>
    <string name="to_date">to date:</string>
    <string name="today">today:</string>
    <string name="yodo_today_balance">Today\'s Balance:</string>
    
    <!-- Exchange Response -->
    <string name="exchange_code">Code:</string>
    <string name="exchange_auth">Authorization Number:</string>
    <string name="exchange_message">Message:</string>
    <string name="exchange_extra">Extra:</string>
    
    <!-- Preview Messages -->
    <string name="ok_balance">The transaction can be performed successfully</string>
    <string name="no_balance">Sorry, You don\'t have enough credit</string>
    
    <!-- configurations -->
    <string name="options">Options</string>
    <string name="tools">Tools</string>
    <string name="set_fee">Set Fee</string>
    <string name="set_currency">Set Currency</string>
    <string name="change_language">Languages</string>
    <string name="sel_language">Select a language</string>
    <string name="get_balance">Get Balance</string>
    <string name="about">About</string>
    <string name="exit_app">Exit</string>
    <string name="ads_successfull">Images loaded successfully</string>
    
    <!-- Tutorial Instructions -->
    <string name="instructions_title">Tutorial</string>
    <string name="instructions_message">Slide your finger to the left to hide the panel</string>
    
</resources>
