<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/next"
        android:id="@+id/registerPipButton"
        android:background="@drawable/red_button"
        android:layout_alignParentBottom="true"
        android:onClick="nextPressed"/>
    
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_above="@+id/registerPipButton" >
            
        	<LinearLayout
                android:id="@+id/register_information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
    
			    <ImageView
			        android:id="@+id/icon_pos"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:layout_margin="20dp"
			        android:src="@drawable/ic_launcher"
			        android:contentDescription="@string/desc" />
			    
			    <TextView
			        android:id="@+id/instructions_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/pip_token"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
			    
			    <co.yodo.pos.transport.helper.ClearEditText
			        android:id="@+id/merchPipText"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_margin="10dp"
			        android:inputType="textPassword"
			        android:hint="@string/merch_pip_hint"
			        android:maxLength="8" />
			    
			      <CheckBox
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_margin="10dp"
			        android:text="@string/show_pass"
			        android:onClick="showPressed" />
		</LinearLayout>
    </ScrollView>
</RelativeLayout>
