<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:ignore="all" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:weightSum="4" >

        <ImageView
            android:id="@+id/oldImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:layout_weight="1"
            android:onClick="oldFeeSelected"
            android:src="@drawable/old" />

        <ImageView
            android:id="@+id/adultImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:layout_weight="1"
            android:onClick="adultFeeSelected"
            android:src="@drawable/adult" />

        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:weightSum="2" >
	        
            <ImageView
                android:id="@+id/voidImageView"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/desc"
	            android:layout_weight="1"
	            android:onClick="childFeeSelected" />
            
	        <ImageView
	            android:id="@+id/childImageView"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:contentDescription="@string/desc"
	            android:layout_weight="1"
	            android:onClick="childFeeSelected"
	            android:src="@drawable/child" />
        
        </LinearLayout>

        <ImageView
            android:id="@+id/studentImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:layout_weight="1"
            android:onClick="studentFeeSelected"
            android:src="@drawable/student" />

    </LinearLayout>

    <!-- Bottom Half of the Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:weightSum="3" >
        
        <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
	        android:layout_weight="1" >
	        
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:layout_marginBottom="10dp"
		        android:orientation="horizontal" >
		        
                <ImageView
		            android:id="@+id/oneImageView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:contentDescription="@string/desc"
		            android:onClick="onePersonsSelected"
		            android:src="@drawable/one" />
                
                <ImageView
		            android:id="@+id/twoImageView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:contentDescription="@string/desc"
		            android:onClick="twoPersonsSelected"
		            android:src="@drawable/two" />
                
                <ImageView
		            android:id="@+id/threeImageView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:contentDescription="@string/desc"
		            android:onClick="threePersonsSelected"
		            android:src="@drawable/three" />
                
                <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="right"
			        android:orientation="horizontal" >
                    
                    <ImageView
			            android:id="@+id/bReset"
			            android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:layout_margin="5dp"
			            android:src="@drawable/reset"
			            android:onClick="resetPressed"
			            android:contentDescription="@string/desc" />
			        
                    <ImageView
			            android:id="@+id/addView"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_margin="5dp"
			            android:contentDescription="@string/desc"
			            android:onClick="addPressed"
			            android:src="@drawable/add" />
		        </LinearLayout>
            </LinearLayout>
        
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="horizontal" >
		        
		    	<!-- Labels -->
		   		<LinearLayout 
				    android:orientation="vertical"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal">
		   		    
		   			<TextView
		   			    android:id="@+id/totalLabel"
		   			    android:layout_width="wrap_content"
		   			    android:layout_height="wrap_content"
		   			    android:layout_marginBottom="5dp"
		   			    android:layout_marginLeft="5dp"
		   			    android:layout_marginTop="8dp"
		   			    android:text="@string/total_fare"
		   			    android:textSize="@dimen/text_size_values" />
		   		<!-- end Labels -->
				</LinearLayout>	  
			    
		   		<!-- Text Fields -->
		   		<LinearLayout
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:layout_gravity="center_horizontal"
		   		    android:orientation="vertical" >
					
					<TextView
					    android:id="@+id/totalText"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:layout_margin="5dp"
					    android:background="@drawable/show_text_field"
					    android:gravity="right"
					    android:singleLine="true"
					    android:text="@string/zero"
					    android:textSize="@dimen/text_size_values" />
					
					<TextView
				        android:id="@+id/currency"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:layout_marginLeft="5dp"
				        android:layout_marginTop="15dp"
				        android:drawablePadding="10dp"
				        android:drawableLeft="@drawable/mexico"
				        android:text="Mexican Peso" />

		   		<!-- end Text Fields -->
				</LinearLayout>	  
			</LinearLayout>
		</LinearLayout>
		
        <ImageView
	            android:id="@+id/yodoLogo"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="50dp"
	            android:layout_weight="2"
	            android:layout_gravity="center|right"
	            android:onClick="payPressed"
	            android:src="@drawable/gear_icon"
	            android:contentDescription="@string/desc" />
    </LinearLayout>

</LinearLayout>
